# MedCATtrainer

./: .env  .env-example  .gitignore  LICENSE  README.md  docker-compose-ct.yml  docker-compose-dev.yml  docker-compose-fimg-mm.yml  docker-compose-fimg.yml  docker-compose-hubimg.yml  docker-compose-latest.yml  docker-compose-mc0x.yml  docker-compose-prod.yml  docker-compose.yml  install.sh  manage.py  readthedocss.yml  requirements.txt  supervisord.conf
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml  qa.yml  release.yml
cattrainer/: settings.py  urls.py  wsgi.py
client/: README.md  mctclient.py  pyproject.toml
client/tests/: test_mctclient.py
configs/: base.txt
docs/: API_Examples.ipynb  Processing_Annotations.ipynb  admin_setup.md  advanced_usage.md  annotator_guide.md  conf.py  demo_page.md  index.rst  installation.md  main.md  maintanence.md  maintenance.md  meta_annotations.md  project_admin.md  project_group_admin.md  requirements.txt
docs/example_data/: MedCAT_Export_With_Text_2020-03-31_11_42_07.json  cardio.csv  neuro.csv  psych.csv
envs/: env  env-prod  env_ct  env_dev  env_fullumls_long  env_mm
nginx/: Dockerfile  nginx.conf
nginx/sites-enabled/: medcattrainer
notebook_docs/: API_Examples.ipynb  Client_API_Tutorials.ipynb  Generate_CUI_Filters.ipynb  Processing_Annotations.ipynb  Train_MedCAT_Models.ipynb
notebook_docs/.ipynb_checkpoints/: API_Examples-checkpoint.ipynb
trainerapp/: admin.py  apps.py  models.py  urls.py
webapp/: Dockerfile  db.sqlite3  load_examples.py  requirements.txt  run.sh
webapp/core/: settings.py  (+1 more)
(+261 files in other folders)
